--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ h4, .p1
 }
 p
 {
-	font-size: 125%;
+	font-size: 100%;
 }
 
 
@@ -70,4 +70,9 @@ header>div.head
 {
 
 	overflow: hidden;
+}
+.android {
+    -webkit-columns: 100px 3; /* Chrome, Safari, Opera */
+    -moz-columns: 100px 3; /* Firefox */
+    columns: 100px 3;
 }
