--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-* { font-family: “Myriad Pro”, Arial, Helvetica, Tahoma, sans-serif; }
+* {	font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif; }
 
 header
 {
