--- a/main.css
+++ b/main.css
@@ -2,8 +2,11 @@
 
 header
 {
+	 background-image: url('background2.jpg');
+  /*http://wallpapersafari.com/w/gXswE4/*/
 	height:100vh;
 	text-align: center;
+	 z-index: 1;
 }
 
 header>div.title1
@@ -14,6 +17,7 @@ header>div.title1
     left: 0;
     right: 0;
     margin: auto;
+    z-index: 2;
 }
 
 /* =============================================================================
@@ -30,6 +34,7 @@ header>div.title1
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+
 }
 
 .sidenav a {
@@ -52,7 +57,6 @@ header>div.title1
     font-size: 36px;
     margin-left: 50px;
 }
-
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
@@ -70,9 +74,11 @@ canvas{
 	
   width: 100%;
   height: 100%;
-  background-image: url('background2.jpg');
   background-size:cover;
   height:100vh;
+  position:absolute;
+  z-index: 3;
+
 
 }
 
