--- a/main.css
+++ b/main.css
@@ -20,9 +20,9 @@ header>div.title1
     z-index: 2;
 }
 
-/* =============================================================================
+/*=============================================================================
    SideBar
-   ========================================================================== */
+===============================================================================*/
 
 .sidenav {
     height: 100%;
@@ -34,6 +34,7 @@ header>div.title1
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
+    z-index: -1;
 
 }
 
@@ -61,9 +62,9 @@ header>div.title1
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-/* =============================================================================
+/*=============================================================================
    Particles
-   ========================================================================== */
+==============================================================================*/
 canvas{
     display:block;
   
@@ -78,21 +79,18 @@ canvas{
   height:100vh;
   position:absolute;
   z-index: 3;
-
-
 }
 
-/* =============================================================================
+/*=============================================================================
    Others
-
-   #particles-js
-   {position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;}
-   ========================================================================== */
-
+==============================================================================*/
+hr {
+    border: solid 30px;
+    height: 10px;
+    /* Set the hr color */
+    color: #333; /* old IE */
+    background-color: #333; /* Modern Browsers */
+}
 body
 {
 	height:100%;
@@ -148,4 +146,11 @@ p
     -webkit-columns: 100px 3; /* Chrome, Safari, Opera */
     -moz-columns: 100px 3; /* Firefox */
     columns: 100px 3;
+}
+
+.contact 
+{
+text-align: center;
+position: absolute;
+margin: auto;
 }
