--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 
 header
 {
-	 background-image: url('background2.jpg');
+	 background-image: url('images/background2.jpg');
   /*http://wallpapersafari.com/w/gXswE4/*/
 	height:100vh;
 	text-align: center;
@@ -34,7 +34,7 @@ header>div.title1
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    z-index: -1;
+    z-index: 1;
 
 }
 
@@ -79,6 +79,27 @@ canvas{
   height:100vh;
   position:absolute;
   z-index: 3;
+}
+/*=============================================================================
+   Card
+==============================================================================*/
+.card 
+{
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover 
+{
+    box-shadow: 0 12px 20px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container1 
+{
+    padding: 2px 16px;
 }
 
 /*=============================================================================
@@ -142,15 +163,16 @@ p
 
 	overflow: hidden;
 }
-.android {
+.android 
+{
     -webkit-columns: 100px 3; /* Chrome, Safari, Opera */
     -moz-columns: 100px 3; /* Firefox */
     columns: 100px 3;
 }
 
-.contact 
+.contact .img
 {
-text-align: center;
-position: absolute;
-margin: auto;
+	text-align: center;
+	position: absolute;
+	margin: auto;
 }
