--- a/main.css
+++ b/main.css
@@ -2,11 +2,11 @@
 
 header
 {
-	 background-image: url('images/background2.jpg');
+	background-image: url('images/background2.jpg');
   /*http://wallpapersafari.com/w/gXswE4/*/
 	height:100vh;
 	text-align: center;
-	 z-index: 1;
+	z-index: 1;
 }
 
 header>div.title1
@@ -19,11 +19,15 @@ header>div.title1
     margin: auto;
     z-index: 2;
 }
+header>div.arr
+{
+	 position: absolute;
+	 z-index: 5;
+}
 
 /*=============================================================================
    SideBar
 ===============================================================================*/
-
 .sidenav {
     height: 100%;
     width: 0;
@@ -65,9 +69,9 @@ header>div.title1
 /*=============================================================================
    Particles
 ==============================================================================*/
-canvas{
+canvas
+{
     display:block;
-  
 }
 
 /* ---- particles.js container ---- */
@@ -105,7 +109,8 @@ canvas{
 /*=============================================================================
    Others
 ==============================================================================*/
-hr {
+hr 
+{
     border: solid 30px;
     height: 10px;
     /* Set the hr color */
