--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -13,3 +13,14 @@ body {
     padding-top: 56px;
   }
 }
+/*=============================================================================
+   Back to top button
+==============================================================================*/
+ .back-to-top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
+    color:grey;
+}
