--- a/pages/Resolver/css/styles.css
+++ b/pages/Resolver/css/styles.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -18,6 +18,17 @@ body {
     margin-bottom: 20px;
     border-bottom: 2px solid #ccc;
     padding-bottom: 10px;
+}
+
+.message {
+    border: 1px solid #d4d4d5; /* Light gray border */
+    background-color: #f9f9f9; /* Subtle gray background */
+    padding: 5px; /* Add some spacing inside the box */
+    border-radius: 4px; /* Rounded corners for a modern look */
+    color: #333; /* Default text color */
+    font-size: 14px; /* Adjust font size for readability */
+    margin-bottom: 20px; /* Add spacing below the box */
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow */
 }
 
 /* Form Styles */
